New logo and design

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,10 +22,12 @@
         </activity>
         <activity
             android:name=".ChannelActivities.ChannelListActivity"
+            android:parentActivityName=".ChannelActivities.LoginActivity"
             android:label="@string/title_activity_channel_list"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ChannelActivities.ChannelActivity"
+            android:parentActivityName=".ChannelActivities.ChannelListActivity"
             android:label="@string/title_activity_channel"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
